--- a/AdvancedR_Course_Day1/Advanced-Day1.qmd
+++ b/AdvancedR_Course_Day1/Advanced-Day1.qmd
@@ -14,6 +14,8 @@ editor: visual
 embed-resources: true
 ---
 
+**TODO** - need to add in examples with real data
+
 # Statistical modelling in R for ecologists (Part 1)
 
 Whenever you embark on a journey in statistical modelling, it's good to be reminded of the following quote from *George E.P. Box*,
